--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,13 +24,13 @@ html, body{
   border-radius: 5px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.15);
 }
-.container form .title{
+.container .form .title{
   font-size: 30px;
   font-weight: 600;
   margin: 20px 0 10px 0;
   position: relative;
 }
-.container form .title:before{
+.container .form .title:before{
   content: '';
   position: absolute;
   height: 4px;
@@ -40,20 +40,20 @@ html, body{
   border-radius: 5px;
   background: linear-gradient(to right, #99004d 0%, #ff0080 100%);
 }
-.container form .input-box{
+.container .form .input-box{
   width: 100%;
   height: 45px;
   margin-top: 25px;
   position: relative;
 }
-.container form .input-box input{
+.container .form .input-box input{
   width: 100%;
   height: 100%;
   outline: none;
   font-size: 16px;
   border: none;
 }
-.container form .underline::before{
+.container .form .underline::before{
   content: '';
   position: absolute;
   height: 2px;
@@ -62,7 +62,7 @@ html, body{
   left: 0;
   bottom: 0;
 }
-.container form .underline::after{
+.container .form .underline::after{
   content: '';
   position: absolute;
   height: 2px;
@@ -74,12 +74,12 @@ html, body{
   transform-origin: left;
   transition: all 0.3s ease;
 }
-.container form .input-box input:focus ~ .underline::after,
-.container form .input-box input:valid ~ .underline::after{
+.container .form .input-box input:focus ~ .underline::after,
+.container .form .input-box input:valid ~ .underline::after{
   transform: scaleX(1);
   transform-origin: left;
 }
-.container form .button{
+.container .form .button{
   margin: 40px 0 20px 0;
 }
 .container .input-box input[type="submit"]{
